2007-07-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.99875-4

	* tests/Class+Meth.R (tstMatrixClass): add dimnames, and hence test
	some dimnames perservation.

	* R/dsTMatrix.R (t-method): keep dimnames
	* R/dtTMatrix.R:  ditto

	* R/sparseMatrix.R (prSpMatrix): print colnames when non-trivial
	and ncol(.) < 10

	* src/cs_utils.c: drop check_class() and use Matrix_check_class()
	from Mutils.h

	* src/lgCMatrix.c ([ln]csc_to_matrix): no longer lose dimnames,
	e.g. in as(<ngCMatrix>, "matrix")

2007-06-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.99875-3 ready to be released.

	* R/sparseMatrix.R (spMatrix): make spMatrix(3,4) working

	* R/AllGeneric.R: set "Math" (and "Math2") group generics in a way
	that should also work in a future version of R.

2007-06-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE, R/AllClass.R: "xsparseVector" class union.

	* R/sparseVector.R: more *sparseVector coercions, notably for
	non - double ones.

2007-06-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/colSums.R: new file for all (col|row)(Sums|Means) methods,
	  notably the new ones building on the new .Call(.)s:

	* src/dgCMatrix.c (DEF_gCMatrix_COLSUMS): use to define
	all 4 of [dlin]gCMatrix_colSums().

2007-06-18 16:12  Douglas Bates <bates@stat.wisc.edu>

	* [r4472] src/Syms.h, src/init.c: Added Matrix_lengthSym
	* [r4473] src/dgCMatrix.c: Modified dgCMatrix_colSums for sparseVector
	  result

2007-06-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/kronecker.R: fix typo (could lead to inf.recursion)
	* test/simple.R: testing that

	* R/sparseMatrix.R (prSpMatrix): change to be used as print()
	method as well (which can have arguments, show() can't).

2007-06-16 15:52  Douglas Bates <bates@stat.wisc.edu>

	* [r4466] R/dgCMatrix.R, src/dgCMatrix.c, src/dgCMatrix.h, src/init.c:
	  added dgCMatrix_colSums for [col,row][Sums,Means]
