@@ -28,6 +28,7 @@ export("Cholesky",
        "lu",
        "norm",
        "nnzero",
+       "printSpMatrix",
        "rcond",
        "readHB",
        "readMM",
